--- a/index.html
+++ b/index.html
@@ -1,11 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Test</title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Firebase CRUD</title>
+  </head>
+  <body>
+    <h1>Firebase CRUD</h1>
 
-</body>
+    <form id="task-form">
+      <label for="task-title">Task title</label>
+      <input type="text" placeholder="Task title" id="task-title" />
+
+      <label for="task-description">Task description</label>
+      <textarea
+        placeholder="Task description"
+        id="task-description"
+        rows="3"
+      ></textarea>
+
+      <button id="btn-task-save">Save</button>
+    </form>
+
+    <div id="tasks-container"></div>
+
+    <script type="module" src="./index.js"></script>
+  </body>
 </html>
