--- a/index.html
+++ b/index.html
@@ -4,25 +4,39 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Firebase CRUD</title>
+    <link
+      rel="stylesheet"
+      href="https://bootswatch.com/5/cyborg/bootstrap.min.css"
+    />
   </head>
   <body>
-    <h1>Firebase CRUD</h1>
+    <div class="container p-4">
+      <div class="row">
+        <div class="col-md-6">
+          <div class="card">
+            <div class="card-body">
+              <h1 class="h4">Add Task</h1>
+              <form id="task-form">
+                <label for="task-title">Task title</label>
+                <input class="form-control mb-3" type="text" placeholder="Task title" id="task-title" />
 
-    <form id="task-form">
-      <label for="task-title">Task title</label>
-      <input type="text" placeholder="Task title" id="task-title" />
+                <label for="task-description">Task description</label>
+                <textarea
+                  class="form-control mb-3"
+                  placeholder="Task description"
+                  id="task-description"
+                  rows="3"
+                ></textarea>
 
-      <label for="task-description">Task description</label>
-      <textarea
-        placeholder="Task description"
-        id="task-description"
-        rows="3"
-      ></textarea>
+                <button class="btn btn-primary" id="btn-task-save">Save</button>
+              </form>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6" id="tasks-container"></div>
+      </div>
+    </div>
 
-      <button id="btn-task-save">Save</button>
-    </form>
-
-    <div id="tasks-container"></div>
 
     <script type="module" src="./index.js"></script>
   </body>
